src/objects/Investments_Needing_Service__c.object
<CustomObject>
    <description>Junction obj so users can access Investments  from Case</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Investment__r.Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Client Investments Needing Services</relationshipLabel>
        <relationshipName>Investments_Needing_Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Client_Investment_Type__c</fullName>
        <formula>Text(Investment__r.Plan__r.Plan_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Investment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_s_Account_Number__c</fullName>
        <formula>(Investment__r.Account_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client&apos;s Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invesments__c</fullName>
        <formula>Investment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invesment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investment</label>
        <referenceTo>Account__c</referenceTo>
        <relationshipLabel>Client Investments Needing Services</relationshipLabel>
        <relationshipName>Investments_Needing_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Org_Name__c</fullName>
        <formula>Investment__r.Organization__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Start_Date__c</fullName>
        <formula>Investment__r.Performance_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Performance Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Client Investments Needing Services</relationshipLabel>
        <relationshipName>Client_Investments_Needing_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plans__c</fullName>
        <formula>Investment__r.Plan__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Code__c</fullName>
        <formula>IF(ISBLANK(Investment__r.Portfolio__r.Portfolio_Code__c ), &apos;&apos;,Investment__r.Portfolio__r.Portfolio_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portfolio Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolios__c</fullName>
        <formula>Investment__r.Portfolio__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portfolio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Style__c</fullName>
        <formula>IF(ISBLANK(TEXT(Investment__r.Portfolio__r.Style__c) ), &apos;&apos;, TEXT(Investment__r.Portfolio__r.Style__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Style</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Currency__c</fullName>
        <formula>TEXT(Investment__r.Reporting_Currency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share_Class__c</fullName>
        <formula>Investment__r.Share_Class__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Share Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <formula>IF(ISBLANK(TEXT(Investment__r.Portfolio__r.Vehicle__c) ), &apos;&apos;, TEXT(Investment__r.Portfolio__r.Vehicle__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle</label>
        <type>Text</type>
    </fields>
    <label>Client Investments Needing Service</label>
    <nameField>
        <displayFormat>InS{0000}</displayFormat>
        <label>Investments Needing Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Investments Needing Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>